# spann

./: .coverage  .env.example  .gitignore  .graphify_cached.json  .graphify_uncached.txt  Makefile  README.md  capacitor.config.json  docker-compose.test.yml  docker-compose.yml  electron-builder.yml  eslint.config.js  fix.js  index.html  package-lock.json  package.json  patch.cjs  patch2.cjs  replace.cjs  replace.js  split-css.cjs  start.ps1  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.claude/: settings.local.json
backend/: .coverage  .coveragerc  .dockerignore  .local_store_state.json  Dockerfile  alembic.ini  celeryconfig.py  conftest.py  coverage.json  e2e_live_probe.py  migration.sql  pytest.ini  requirements-test.txt  requirements.txt  schema.sql  setup.sh
backend/ai/: groq_client.py  requirements.txt
backend/alembic/: env.py
backend/api/: database.py  groq.py  logging_cfg.py  main.py  models.py  requirements.txt  schema.sql
backend/app/: __init__.py  config.py  database.py  main.py  metrics.py
backend/tests/: conftest.py  test_auth.py  test_auth_coverage.py  test_carbon.py  test_celery_tasks.py  test_channels.py  test_coverage_gaps.py  test_database_carbon.py  test_integration.py  test_mesh.py  test_mesh_coverage.py  test_messages.py  (+10 more)
chat-server/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
desktop/: main.cjs  preload.cjs
docs/: backend-e2e-verification-2026-04-08.md  backend.md  native-app.md  qml-page-samples.md  two-device-setup.md
electron/: deeplink.ts  main.ts  notifications.ts  path-utils.ts  preload.ts  tray.ts  updater.ts  window.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
mesh-daemon/: .dockerignore  CMakeLists.txt  Dockerfile
mesh-daemon/src/: main.cpp
mesh-daemon/src/api/: handlers.cpp  handlers.h  http_server.cpp  http_server.h
mesh-daemon/src/ble/: advertiser.cpp  advertiser.h  gatt_server.cpp  gatt_server.h  scanner.cpp  scanner.h
mesh-daemon/src/network/: failover.cpp  failover.h  reachability.cpp  reachability.h
mesh-daemon/src/routing/: dedup_filter.cpp  dedup_filter.h  epidemic_router.cpp  epidemic_router.h  message_store.cpp  message_store.h  types.h
mesh-daemon/src/utils/: logger.cpp  logger.h  uuid.cpp  uuid.h
mesh-daemon/src/webrtc/: peer_connection.cpp  peer_connection.h  signaling.cpp  signaling.h
mesh-relay/: .dockerignore  Cargo.toml  Dockerfile
mesh-relay/src/: config.rs  main.rs
mesh-relay/src/handlers/: mod.rs  relay.rs  sync.rs  ws.rs
mesh-relay/src/middleware/: auth.rs  rate_limit.rs
mesh-relay/src/models/: message.rs  node.rs
mesh-relay/src/store/: message_queue.rs  mod.rs  node_registry.rs
server/: index.js
src/: env.d.ts  main.jsx
(+204 files in other folders)
