[package]
name = "mesh-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "json", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "env-filter"] }
dashmap = "6.1.0"
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
governor = "0.8.0"
nonzero_ext = "0.3.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
