[package]
name = "mesh-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "json", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json", "env-filter"] }
dashmap = "6.1.0"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
governor = "0.10.4"
nonzero_ext = "0.3.0"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
